--- a/programs/squad/Cargo.toml
+++ b/programs/squad/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "sonic-rush"
+name = "squad"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "sonic_rush"
+name = "squad"
 
 [features]
 default = []
